2009-06-24  Andreas Schwab  <aschwab@redhat.com>

	* sysdeps/powerpc/powerpc32/power4/fpu/w_sqrtf.S: Fix cfa offset
	for saved registers.
	* sysdeps/powerpc/powerpc32/power4/fpu/w_sqrt.S: Likewise.
	* sysdeps/powerpc/powerpc32/power5/fpu/w_sqrtf.S: Likewise.
	* sysdeps/powerpc/powerpc32/power5/fpu/w_sqrt.S: Likewise.

2009-06-23  Andreas Schwab  <aschwab@redhat.com>

	* time/tzfile.c (__tzfile_read): Don't use an empty TZ string.

2009-06-22  Ulrich Drepper  <drepper@redhat.com>

	* po/id.po: Update from translation team.

	* po/bg.po: Update from translation team.

2009-06-22  H.J. Lu  <hongjiu.lu@intel.com>

	* string/strncmp.c (STRNCMP): New.  Defined to strncmp if not
	defined.
	(strncmp): Renamed to STRNCMP.
	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Add
	strncmp-c for string.
	* sysdeps/x86_64/multiarch/init-arch.h (HAS_SSE4_2): Define.
	* sysdeps/x86_64/multiarch/strcmp.S: New file.
	* sysdeps/x86_64/multiarch/strncmp.S: New file.
	* sysdeps/x86_64/multiarch/strncmp-c.c: New file.

2009-06-19  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/Makefile (distribute): Add ifuncmain1staticpie.c,
	ifuncmain5.c, ifuncmain5pic.c, ifuncmain5picstatic.c,
	ifuncmain5pie.c, ifuncmain5static.c, ifuncmain5staticpic.c,
	ifuncdep5.c, ifuncdep5pic.c, ifuncmod5.c, ifuncmain7.c,
	ifuncmain7pic.c, ifuncmain7picstatic.c, ifuncmain7pie.c, and
	ifuncmain7static.c.
	(tests-static): Add ifuncmain5static, ifuncmain5picstatic,
	ifuncmain7static, and ifuncmain7picstatic.
	(tests): Also depend on $(objpfx)ifuncmain1staticpie.out,
	$(objpfx)ifuncmain5pie.out, $(objpfx)ifuncmain6pie.out, and
	$(objpfx)ifuncmain7pie.out.
	(modules-names): Add ifuncmod5 ifuncmod6
	(ifuncmod5.so-no-z-defs): Define.
	(ifuncmod6.so-no-z-defs): Define.
	(CFLAGS-ifuncmain5pic.c): Define.
	(CFLAGS-ifuncmain5picstatic.c): Define.
	(CFLAGS-ifuncmain5staticpic.c): Define.
	(CFLAGS-ifuncdep5pic.c): Define.
	(CFLAGS-ifuncmain7pic.c): Define.
	(CFLAGS-ifuncmain7picstatic.c): Define.